Com os textos do professor.

--- a/FinanceiraWeb/web/home.xhtml
+++ b/FinanceiraWeb/web/home.xhtml
@@ -3,7 +3,7 @@
 <!-- Template Design by TheWebhub.com | http://www.thewebhub.com | Released for free under a Creative Commons Attribution-Share Alike 3.0 Philippines -->
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>FINABAN: Home</title>
+<title>FINABAN: Sociedade</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" media="screen" />
@@ -71,13 +71,13 @@
                         <li><td class="itens_menu"><a href="#" class="link_menu" target="alvo">Custos</a></td></li>
                         </ul>
                         </div>
-                        <div class="titulo_menu"  ><a href="#" class="link_menu" >LEGISLAÇÃO</a></div>
+                        <div class="titulo_menu"  ><a href="legislacao.xhtml" class="link_menu" >LEGISLAÇÃO</a></div>
                         <div class="titulo_menu"  ><a href="javascript:void(escondediv('2',n_divs))" class="link_menu" >PRODUTOS</a></div>
                         <div id="mdiv2"  style="display:none">
                         <ul>
-                        <li><td class="itens_menu"><a href="prosabendo.xhtml" class="link_menu" target="alvo">Pro-sabendo</a></td></li>
-                        <li><td class="itens_menu" ><a href="prosolutocom.xhtml" class="link_menu" target="alvo">Pro-soluto com udificação</a></td></li>
-                        <li><td class="itens_menu"><a href="prosolutosem.xhtml" class="link_menu" target="alvo">Pro-soluto sem udificação</a></td></li>
+                        <li><td class="itens_menu"><a href="prosabendo.xhtml" class="link_menu" target="alvo">Pro-solvendo</a></td></li>
+                        <li><td class="itens_menu" ><a href="prosolutocom.xhtml" class="link_menu" target="alvo">Pro-soluto com notificação</a></td></li>
+                        <li><td class="itens_menu"><a href="prosolutosem.xhtml" class="link_menu" target="alvo">Pro-soluto sem notificação</a></td></li>
                         <li><td class="itens_menu" ><a href="maturity.xhtml" class="link_menu" target="alvo">Maturity Factoring</a></td></li>
                         <li><td class="itens_menu"><a href="importexport.xhtml" class="link_menu" target="alvo">Import - Export</a></td></li>
                         </ul>
@@ -89,31 +89,30 @@
                     
                 </div>
                 <div id ="colunaB">
-                        <h2>QUEM SOMOS:</h2>
+                        <h2>SOCIEDADE</h2>
 			<div class="box1">
                                 <ul>
-					<li>&raquo;&nbsp;<strong>FINABAN:</strong> Factorit SpA was founded in December 1978 by a group of Italian Cooperative Banks. Today it is one of the foremost Italian player in the factoring market not only by volumes but also by technological innovation, professionalism and flexibility.
+					<li>
+                                            Finaban é uma empresa do grupo Erin que opera no ramo do factoring. Sua peculiaridade é a atenção para os multíplices aspectos da realidade empresarial, que se manifesta através da prestação de serviços diversificados e flexíveis.
 
-The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
+Para Finaban isso significa disponibilizar para os clientes um conjunto de produtos altamente personalizados, capazes de responder às exigências especificas de cada empresa.
+ </li><br></br>
+<li>&raquo;&nbsp;<strong>Finaban Sociedade de Fomento Mercantil Ltda</strong> </li>                                       
+<pre><font face="verdana"> - Sede legal e administrativa
+   Rua Carlos Sampaio 351, Centro, Rio de Janeiro
+   Tel.
 
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
+- Sede de atendimento
+  Rua Santa Clara 105, Copacabana, Rio de Janeiro
 
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-                                        The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
+- CNPJ
 
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
+- Membro do Sinfac e Anfac numero
 
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
+- Sociedade do Grupo Erin </font></pre>
 
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
-
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors. 
  <div id ="fotoFinaban"></div>
-                                        </li>
+                                        
                                 </ul>
 			</div>
                      </div>
