--- a/FinanceiraWeb/web/legislacao.xhtml
+++ b/FinanceiraWeb/web/legislacao.xhtml
@@ -92,22 +92,14 @@
                     </ul>
                 </div>
                 <div id ="colunaB">
-                        <h2>PRO-SOLUTO COM NOTIFICAÇÃO</h2>
+                        <h2>LEGISLAÇÃO</h2>
 			<div class="box1">
                                 <ul>
-					<li>É o produto que permite às empresas de obter uma garantia sobre o risco de inademplencia  por parte do devedor, otimizando e controlando as custas das atividades administrativas internas, relativas às operações gestionais. Prevê, além disso, a possibilidade de poder receber antecipações financeiras sobre o montante cedido.<br></br>
+					- Cessão de Direitos - Código Civil - art. 1.065 a 1.078<br></br>
+- Compra e Venda Mercantil - Código Comercial - art. 191 a 220<br></br>
+- Código de Ética, Disciplina e Auto-Regulamentação do Factoring (ANFAC Associação Nacional das Empresas de Fomento Comercial)<br></br>
 
-<br></br>Finaban fornece:<br></br>
-- avaliação e classificação de um teto de garantia para cada devedor cedido.<br></br>
-- a gestão dos créditos cedidos, solicitando o devedor em caso de atraso.<br></br>
-- o pagamento à facturada, num prazo com ela previamente estipulado, em caso de inadimplência do devedor.<br></br>
-- a antecipar uma parte do credito, se tiver sido concordado.<br></br>
-
-<br></br>O factoring pro-soluto com notificação permite:<br></br>
-- de ter certeza sobre a concretização do pagamento.<br></br>
-- de transferir sobre Finaban o risco de inadimplência, reduzindo as perdas por créditos inexigíveis.<br></br>
-- de reduzir a parte administrativa relacionada com gestão e cobrança de credito.<br></br>
- </li>
+ 
 				</ul>
 			</div>
                         <div id="fotoservicos"></div>
