--- a/FinanceiraWeb/web/maturity.xhtml
+++ b/FinanceiraWeb/web/maturity.xhtml
@@ -75,13 +75,13 @@
                         <li><td class="itens_menu"><a href="#" class="link_menu" target="alvo">Custos</a></td></li>
                         </ul>
                         </div>
-                        <div class="titulo_menu"  ><a href="#" class="link_menu" >LEGISLAÇÃO</a></div>
+                        <div class="titulo_menu"  ><a href="legislacao.xhtml" class="link_menu" >LEGISLAÇÃO</a></div>
                         <div class="titulo_menu"  ><a href="javascript:void(escondediv('2',n_divs))" class="link_menu" >PRODUTOS</a></div>
                         <div id="mdiv2"  style="display:none">
                         <ul>
-                        <li><td class="itens_menu"><a href="prosabendo.xhtml" class="link_menu" target="alvo">Pro-sabendo</a></td></li>
-                        <li><td class="itens_menu" ><a href="prosolutocom.xhtml" class="link_menu" target="alvo">Pro-soluto com udificação</a></td></li>
-                        <li><td class="itens_menu"><a href="prosolutosem.xhtml" class="link_menu" target="alvo">Pro-soluto sem udificação</a></td></li>
+                        <li><td class="itens_menu"><a href="prosabendo.xhtml" class="link_menu" target="alvo">Pro-solvendo</a></td></li>
+                        <li><td class="itens_menu" ><a href="prosolutocom.xhtml" class="link_menu" target="alvo">Pro-soluto com notificação</a></td></li>
+                        <li><td class="itens_menu"><a href="prosolutosem.xhtml" class="link_menu" target="alvo">Pro-soluto sem notificação</a></td></li>
                         <li><td class="itens_menu" ><a href="maturity.xhtml" class="link_menu" target="alvo">Maturity Factoring</a></td></li>
                         <li><td class="itens_menu"><a href="importexport.xhtml" class="link_menu" target="alvo">Import - Export</a></td></li>
                         </ul>
@@ -92,30 +92,24 @@
                     </ul>
                 </div>
                 <div id ="colunaB">
-                        <h2>MATURITY FACTORING:</h2>
+                        <h2>MATURITY FACTORING</h2>
 			<div class="box1">
                                 <ul>
-					<li>&raquo;&nbsp;<strong>FINABAN:</strong> Factorit SpA was founded in December 1978 by a group of Italian Cooperative Banks. Today it is one of the foremost Italian player in the factoring market not only by volumes but also by technological innovation, professionalism and flexibility.
+					<li>É um produto muito utilizado por empresas de médio e grande porte, pertencentes aos mais diversificados setores de mercado: importadores e distribuidores de veículos e alimentos, redes de varejo, indústria petrolífera e informática, setor turístico e hoteleiro.
 
-The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
+<br></br> <br></br>Com o contrato Maturity factoring, Finaban credita à facturada o valor referente à venda mercantil a prazo, num dia previamente estabelecido (geralmente dois, três dias após o vencimento do prazo  com a parte devedora), caso o pagamento por parte do devedor à facturada não seja efetuado.
+<br></br><br></br>A operação pode ser realizada na modalidade pro-solvendo e pro-soluto.
 
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
+<br></br><br></br>Vantagens oferecidas por este tipo de contrato:<br></br>
+- otimização do planejamento financeiro e, por conseqüência, da gestão da tesouraria, podendo contar com fluxos de entrada certos;<br></br>
+-reduzir as custas do aparato administrativo, especificamente do setor dedicado à gestão e cobrança de créditos;<br></br>
+<br></br>Finaban oferece um serviço completo relativo aos créditos cedidos e, a combinar:<br></br>
+- garantia sobre o bom êxito do negocio (pro-soluto), característica que transfere sobre Finaban o risco de inadimplência do devedor;<br></br>
+- possibilidade de obter antecipações financeiras sobre o valor a receber;<br></br>
+- possibilidade de renegociação da divida com a parte devedora, aspecto que confere ao serviço uma conotação tipicamente comercial, permitindo aos devedores uma renegociação das dividas.<br></br>
 
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-                                        The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
-
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
-
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
-
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
-
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-                                        </li>
+<br></br>O Maturity factoring operado por Finaban pode ser realizado tanto sobre o faturado inteiro quanto sobre uma parte.
+</li>
 				</ul>
 			</div>
                         <div id="fotoservicos"></div>
