--- a/FinanceiraWeb/web/prosabendo.xhtml
+++ b/FinanceiraWeb/web/prosabendo.xhtml
@@ -75,13 +75,13 @@
                         <li><td class="itens_menu"><a href="#" class="link_menu" target="alvo">Custos</a></td></li>
                         </ul>
                         </div>
-                        <div class="titulo_menu"  ><a href="#" class="link_menu" >LEGISLAÇÃO</a></div>
+                        <div class="titulo_menu"  ><a href="legislacao.xhtml" class="link_menu" >LEGISLAÇÃO</a></div>
                         <div class="titulo_menu"  ><a href="javascript:void(escondediv('2',n_divs))" class="link_menu" >PRODUTOS</a></div>
                         <div id="mdiv2"  style="display:none">
                         <ul>
-                        <li><td class="itens_menu"><a href="prosabendo.xhtml" class="link_menu" target="alvo">Pro-sabendo</a></td></li>
-                        <li><td class="itens_menu" ><a href="prosolutocom.xhtml" class="link_menu" target="alvo">Pro-soluto com udificação</a></td></li>
-                        <li><td class="itens_menu"><a href="prosolutosem.xhtml" class="link_menu" target="alvo">Pro-soluto sem udificação</a></td></li>
+                        <li><td class="itens_menu"><a href="prosabendo.xhtml" class="link_menu" target="alvo">Pro-solvendo</a></td></li>
+                        <li><td class="itens_menu" ><a href="prosolutocom.xhtml" class="link_menu" target="alvo">Pro-soluto com notificação</a></td></li>
+                        <li><td class="itens_menu"><a href="prosolutosem.xhtml" class="link_menu" target="alvo">Pro-soluto sem notificação</a></td></li>
                         <li><td class="itens_menu" ><a href="maturity.xhtml" class="link_menu" target="alvo">Maturity Factoring</a></td></li>
                         <li><td class="itens_menu"><a href="importexport.xhtml" class="link_menu" target="alvo">Import - Export</a></td></li>
                         </ul>
@@ -92,29 +92,24 @@
                     </ul>
                 </div>
                 <div id ="colunaB">
-                        <h2>PRO-SABENDO:</h2>
+                        <h2>PRO-SOLVENDO</h2>
 			<div class="box1">
                                 <ul>
-					<li>&raquo;&nbsp;<strong>FINABAN:</strong> Factorit SpA was founded in December 1978 by a group of Italian Cooperative Banks. Today it is one of the foremost Italian player in the factoring market not only by volumes but also by technological innovation, professionalism and flexibility.
+					<li>
+                                        É a formula mais tradicional do factoring. No ato em que a factorada transfere seus direitos creditórios para Finaban recebe a antecipação financeira de uma cota concordada, parcial ou total, da venda a prazo. Finaban segue toda a parte administrativa da operação, até o pagamento. É um produto voltado para: <br></br>
+- empresas em rápida expansão, com crescentes necessidades de liquidez.<br></br>
+- para empresas que preferem não seguir a parte administrativa da negociação.<br></br>
+- para empresas que negociam com o setor público, onde há freqüentes atrasos nos pagamentos e modalidades de contrato atípicas.<br></br>
 
-The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
+<br></br>Finaban providencia:<br></br>
+- a anticipar antes do vencimento o credito.<br></br>
+- a gestão dos créditos cedidos, entrando em contato com o devedor em caso de atraso do pagamento.<br></br>
 
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
+<br></br>O factoring pro-solvendo permite:<br></br>
+- de contar sobre uma alavanca financeira além da oferecida pelo banco.<br></br>
+- de reduzir a parte administrativa relacionada com gestão e cobrança de credito.<br></br>
+- para quem trabalha com órgãos públicos, de poder contar com o conhecimento de Finaban nessa área.
 
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-                                        The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
-
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
-
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
-
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
-
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
                                         </li>
 				</ul>
 			</div>
