--- a/FinanceiraWeb/web/prosolutosem.xhtml
+++ b/FinanceiraWeb/web/prosolutosem.xhtml
@@ -75,13 +75,13 @@
                         <li><td class="itens_menu"><a href="#" class="link_menu" target="alvo">Custos</a></td></li>
                         </ul>
                         </div>
-                        <div class="titulo_menu"  ><a href="#" class="link_menu" >LEGISLAÇÃO</a></div>
+                        <div class="titulo_menu"  ><a href="legislacao.xhtml" class="link_menu" >LEGISLAÇÃO</a></div>
                         <div class="titulo_menu"  ><a href="javascript:void(escondediv('2',n_divs))" class="link_menu" >PRODUTOS</a></div>
                         <div id="mdiv2"  style="display:none">
                         <ul>
-                        <li><td class="itens_menu"><a href="prosabendo.xhtml" class="link_menu" target="alvo">Pro-sabendo</a></td></li>
-                        <li><td class="itens_menu" ><a href="prosolutocom.xhtml" class="link_menu" target="alvo">Pro-soluto com udificação</a></td></li>
-                        <li><td class="itens_menu"><a href="prosolutosem.xhtml" class="link_menu" target="alvo">Pro-soluto sem udificação</a></td></li>
+                        <li><td class="itens_menu"><a href="prosabendo.xhtml" class="link_menu" target="alvo">Pro-solvendo</a></td></li>
+                        <li><td class="itens_menu" ><a href="prosolutocom.xhtml" class="link_menu" target="alvo">Pro-soluto com notificação</a></td></li>
+                        <li><td class="itens_menu"><a href="prosolutosem.xhtml" class="link_menu" target="alvo">Pro-soluto sem notificação</a></td></li>
                         <li><td class="itens_menu" ><a href="maturity.xhtml" class="link_menu" target="alvo">Maturity Factoring</a></td></li>
                         <li><td class="itens_menu"><a href="importexport.xhtml" class="link_menu" target="alvo">Import - Export</a></td></li>
                         </ul>
@@ -92,30 +92,24 @@
                     </ul>
                 </div>
                 <div id ="colunaB">
-                        <h2>PRO-SOLUTO SEM EDIFICAÇÃO:</h2>
+                        <h2>PRO-SOLUTO SEM NOTIFICAÇÃO:</h2>
 			<div class="box1">
                                 <ul>
-					<li>&raquo;&nbsp;<strong>FINABAN:</strong> Factorit SpA was founded in December 1978 by a group of Italian Cooperative Banks. Today it is one of the foremost Italian player in the factoring market not only by volumes but also by technological innovation, professionalism and flexibility.
+					<li>É um produto dirigido para empresas que querem se tutelar contra o risco de inademplencia, sem delegar a Finaban a atividade de gestão do credito.<br></br>
+<br></br>O produto caracteriza-se por:<br></br>
+- a cessão do credito não vem comunicada ao devedor, que, portanto, desconhece o vinculo entre a empresa credora e Finaban.<br></br>
+- a avaliação de cada cliente, ao fim de atribui-lhe um teto de garantia.<br></br>
+- a empresa factorada continua a gestão do credito para todo o tempo que o devedor se demonstrar pontual com os pagamentos.<br></br>
+- os devedores recebem a comunicação da existência de um contrato de factoring somente se não se demonstrar regulares nos pagamentos.<br></br>
+- quando os devedores são notificados sobre a existência de um contrato de factoring, Finaban passa a gestir o credito a receber  e paga à factorada, numa data precedentemente estabelecida, o valor concordado.<br></br>
 
-The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
+<br></br>O factoring pro-soluto sem notificação permite às empresas:<br></br>
+- de poder contar sobre uma avaliação previa do risco e, em seguida, de monitorar a regularidade nos pagamentos.<br></br>
+- de ter a garantia sobre o pagamento, transferindo sobre Finaban o risco da operação.<br></br>
+- de manter dentro da própria estrutura a gestão financeira.<br></br>
 
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
-
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-                                        The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
-
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
-
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
-
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
-
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-                                        </li>
+<br></br>O factoring pro-soluto sem notificação pode aplicado à totalidade ou a uma parte do credito.  
+ </li>
 				</ul>
 			</div>
                         <div id="fotoservicos"></div>
