--- a/trunk/FinanceiraWeb/web/legislacao.xhtml
+++ b/trunk/FinanceiraWeb/web/legislacao.xhtml
@@ -95,8 +95,8 @@
                         <h2>LEGISLAÇÃO</h2>
 			<div class="box1">
                                 <ul>
-					- Cessão de Direitos - Código Civil - art. 1.065 a 1.078<br></br>
-- Compra e Venda Mercantil - Código Comercial - art. 191 a 220<br></br>
+					- Cessão de Direitos - <a href="http://www.geranegocio.com.br/download/geral/legis/factoring/codcivilarts1065a1078.zip">  Código Civil</a> - art. 1.065 a 1.078<br></br>
+- Compra e Venda Mercantil - <a href="http://www.geranegocio.com.br/download/geral/legis/factoring/codigocomercial.zip">  Código Comercial</a> - art. 191 a 220<br></br>
 - Código de Ética, Disciplina e Auto-Regulamentação do Factoring (ANFAC Associação Nacional das Empresas de Fomento Comercial)<br></br>
 
  
