--- a/FinanceiraWeb/web/prosabendo.xhtml
+++ b/FinanceiraWeb/web/prosabendo.xhtml
@@ -3,7 +3,7 @@
 <!-- Template Design by TheWebhub.com | http://www.thewebhub.com | Released for free under a Creative Commons Attribution-Share Alike 3.0 Philippines -->
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>FINABAN: Pro-Sabendo</title>
+<title>FINABAN: Pro-Solvendo</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" media="screen" />
@@ -63,7 +63,7 @@
             <div id="box2colunas">
                 <div id ="colunaA">
                     <ul id="menu">
-                        <div class="titulo_menu"  ><a href="index.xhtml" class="link_menu" title="Home">PÁGINA INICIAL</a></div>
+                        <div class="titulo_menu"  ><a href="index.xhtml" class="link_menu" title="Home">HOME</a></div>
                         <div class="titulo_menu"  ><a href="home.xhtml" class="link_menu" title="Home">SOCIEDADE</a></div>
                         <div class="titulo_menu"  ><a href="contatenos.xhtml" class="link_menu" title="Fale Conosco">FALE CONOSCO</a></div>
                         <div class="titulo_menu"  ><a href="javascript:void(escondediv('1',n_divs))" class="link_menu" >O FACTORING</a></div>
