--- a/trunk/FinanceiraWeb/web/servicos.xhtml
+++ b/trunk/FinanceiraWeb/web/servicos.xhtml
@@ -63,7 +63,7 @@
             <div id="box2colunas">
                 <div id ="colunaA">
                     <ul id="menu">
-                        <div class="titulo_menu"  ><a href="index.xhtml" class="link_menu" title="Home">PÁGINA INICIAL</a></div>
+                        <div class="titulo_menu"  ><a href="index.xhtml" class="link_menu" title="Home">HOME</a></div>
                         <div class="titulo_menu"  ><a href="home.xhtml" class="link_menu" title="Home">SOCIEDADE</a></div>
                         <div class="titulo_menu"  ><a href="contatenos.xhtml" class="link_menu" title="Fale Conosco">FALE CONOSCO</a></div>
                         <div class="titulo_menu"  ><a href="javascript:void(escondediv('1',n_divs))" class="link_menu" >O FACTORING</a></div>
