tirando os target = alvo do menu

--- a/FinanceiraWeb/web/importexport.xhtml
+++ b/FinanceiraWeb/web/importexport.xhtml
@@ -69,21 +69,21 @@
                         <div class="titulo_menu"  ><a href="javascript:void(escondediv('1',n_divs))" class="link_menu" >O FACTORING</a></div>
                         <div id="mdiv1"  style="display:none">
                         <ul>
-                        <li><td class="itens_menu"><a href="#" class="link_menu" target="alvo">Introdução</a></td></li>
-                        <li><td class="itens_menu" ><a href="#" class="link_menu" target="alvo">Gestão</a></td></li>
-                        <li><td class="itens_menu"><a href="#" class="link_menu" target="alvo">Antecipação</a></td></li>
-                        <li><td class="itens_menu"><a href="#" class="link_menu" target="alvo">Custos</a></td></li>
+                        <li><td class="itens_menu"><a href="#" class="link_menu" >Introdução</a></td></li>
+                        <li><td class="itens_menu" ><a href="#" class="link_menu" >Gestão</a></td></li>
+                        <li><td class="itens_menu"><a href="#" class="link_menu" >Antecipação</a></td></li>
+                        <li><td class="itens_menu"><a href="#" class="link_menu" >Custos</a></td></li>
                         </ul>
                         </div>
                         <div class="titulo_menu"  ><a href="legislacao.xhtml" class="link_menu" >LEGISLAÇÃO</a></div>
                         <div class="titulo_menu"  ><a href="javascript:void(escondediv('2',n_divs))" class="link_menu" >PRODUTOS</a></div>
                         <div id="mdiv2"  style="display:none">
                         <ul>
-                        <li><td class="itens_menu"><a href="prosabendo.xhtml" class="link_menu" target="alvo">Pro-solvendo</a></td></li>
-                        <li><td class="itens_menu" ><a href="prosolutocom.xhtml" class="link_menu" target="alvo">Pro-soluto com notificação</a></td></li>
-                        <li><td class="itens_menu"><a href="prosolutosem.xhtml" class="link_menu" target="alvo">Pro-soluto sem notificação</a></td></li>
-                        <li><td class="itens_menu" ><a href="maturity.xhtml" class="link_menu" target="alvo">Maturity Factoring</a></td></li>
-                        <li><td class="itens_menu"><a href="importexport.xhtml" class="link_menu" target="alvo">Import - Export</a></td></li>
+                        <li><td class="itens_menu"><a href="prosabendo.xhtml" class="link_menu" >Pro-solvendo</a></td></li>
+                        <li><td class="itens_menu" ><a href="prosolutocom.xhtml" class="link_menu" >Pro-soluto com notificação</a></td></li>
+                        <li><td class="itens_menu"><a href="prosolutosem.xhtml" class="link_menu" >Pro-soluto sem notificação</a></td></li>
+                        <li><td class="itens_menu" ><a href="maturity.xhtml" class="link_menu" >Maturity Factoring</a></td></li>
+                        <li><td class="itens_menu"><a href="importexport.xhtml" class="link_menu" >Import - Export</a></td></li>
                         </ul>
                         </div>
 
