--- a/FinanceiraWeb/web/prosolutocom.xhtml
+++ b/FinanceiraWeb/web/prosolutocom.xhtml
@@ -3,7 +3,7 @@
 <!-- Template Design by TheWebhub.com | http://www.thewebhub.com | Released for free under a Creative Commons Attribution-Share Alike 3.0 Philippines -->
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>FINABAN: Serviços</title>
+<title>FINABAN: Pro-Soluto com notificação</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" media="screen" />
