Classes de banco de dados

--- a/FinanceiraWeb/web/acessoregistro.xhtml
+++ b/FinanceiraWeb/web/acessoregistro.xhtml
@@ -108,7 +108,7 @@
                                             <br></br>
                                             <br></br>
                                             <div id="botoes">
-                                            <h:commandButton value="Login" action="login"/><h:commandButton value="Novo" action="registro"/></div>
+                                            <h:commandButton value="Login" action="#{userBean.checaUsuario}"/><h:commandButton value="Novo" action="login"/></div>
                                             </div><div id="fotoLogin"></div>
                                             <br></br>
                                         </h:form>
