Acesso a alguns beans

--- a/FinanceiraWeb/web/pagadministrador.xhtml
+++ b/FinanceiraWeb/web/pagadministrador.xhtml
@@ -1,9 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html">
 <!-- Template Design by TheWebhub.com | http://www.thewebhub.com | Released for free under a Creative Commons Attribution-Share Alike 3.0 Philippines -->
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>FINABAN: Serviços</title>
+<title>FINABAN: Administrador</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" media="screen" />
@@ -92,31 +93,13 @@
                     </ul>
                 </div>
                 <div id ="colunaB">
-                        <h2>SERVIÇOS:</h2>
+                    <h2>ADMINISTRADOR:</h2><div id="textoLogin"><h:outputLabel value="Olá, #{userBean.nome}"/></div>
 			<div class="box1">
                                 <ul>
-					<li>&raquo;&nbsp;<strong>FINABAN:</strong> Factorit SpA was founded in December 1978 by a group of Italian Cooperative Banks. Today it is one of the foremost Italian player in the factoring market not only by volumes but also by technological innovation, professionalism and flexibility.
-
-The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
-
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
-
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-                                        The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
-
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
-
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-The company's wide range of products is dedicated both to enterprises acting in national and international markets. In facts, further to the basic mix of factoring services: Receivables Financing, Credit Protection and Receivables Management, Factorit Spa offers a set of special products tailored to the needs of some important industrial and trading sectors.
-
-Factorit Spa has a nationwide presence made of 8 branches (Bologna, Firenze, Genova, Milano, Napoli, Padova, Roma and Torino).
-Its factoring services are also distributed through more than 8.000 counters of the associated Cooperative Banks (Banche Popolari).
-
-Factorit Spa is strongly committed in promoting international factoring transactions and is a member of Factors Chain International, a worldwide network of factors.
-                                        </li>
+					<li>&raquo;&nbsp;<strong>ADMINISTRADOR:</strong> Nesta página, os campos referentes às páginas podem ser alterados.
+                                            Além disso, pode ser feito o cadastro de novos usuários</li>
 				</ul>
+
 			</div>
                         <div id="fotoservicos"></div>
                     </div>
